<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:orientation="vertical"
    tools:context=".addEmployeeActivity">

    <TextView
        android:id="@+id/txtAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        style="@style/TEXT"
        android:text="@string/add_a_new_employee"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/EmployeeIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/employee_id"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/FirstNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_first_name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/LastNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_last_name"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/PhoneNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_phone_number"
        android:inputType="phone"
        android:autofillHints="" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_e_mail"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/PositionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employee_position"
        android:inputType="text"
        android:autofillHints="" />

    <RelativeLayout
        android:id="@+id/horizontalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/addEmployeeButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/add"
            style="@style/BUTTON"
            app:cornerRadius="10dp" />
        <Button
            android:id="@+id/cancelAddingEmployeeButton"
            android:layout_alignParentEnd="true"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="@style/BUTTON"
            android:text="@string/cancel"
            app:cornerRadius="10dp" />
    </RelativeLayout>
</LinearLayout>