<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/SCREEN"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#213555"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_theme"
            android:layout_marginStart="10dp"
            style="@style/TEXTTOOLBAR"
            android:fontFamily="sans-serif-medium"
            android:textSize="30sp"/>
        <Switch
            android:id="@+id/themeSwitch"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>
    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        style="@style/TEXT"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/employees_managment_app"
        android:textSize="20sp" />

    <!-- Buttons: Add, Delete, Search, Modify, Show All -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/BUTTON"
        android:text="@string/add_an_employee"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/BUTTON"
        android:text="@string/delete_an_employee"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/BUTTON"
        android:text="@string/search_for_an_employee"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/modifyButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        style="@style/BUTTON"
        android:text="@string/upadate_an_employee"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/showAllButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/BUTTON"
        android:layout_gravity="center"
        android:text="@string/show_all_employees"
        app:cornerRadius="10dp"
        />

</LinearLayout>