<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/SCREEN"
    tools:context=".ItemDetail">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT"
                android:text="Employee First Name: "/>
            <EditText
                android:id="@+id/firstNameTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT"
                android:text="Employee Last Name: "/>
            <EditText
                android:id="@+id/lastNameTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT"
                android:text="Employee ID: "/>
            <EditText
                android:id="@+id/idTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT"
                android:text="Employee Phone Number: "/>
            <EditText
                android:id="@+id/phoneTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT"
                android:text="Employee Email: "/>
            <EditText
                android:id="@+id/emailTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TEXT"
                android:text="Employee Position: "/>
            <EditText
                android:id="@+id/positionTextView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/Call"
            android:layout_width="120dp"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            style="@style/BUTTON"
            app:cornerRadius="10dp"
            android:text="@string/call"/>

        <Button
            android:id="@+id/SMS"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            style="@style/BUTTON"
            app:cornerRadius="10dp"
            android:text="@string/send_sms"/>
        <Button
            android:id="@+id/EMAIL"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            style="@style/BUTTON"
            app:cornerRadius="10dp"
            android:text="@string/send_an_emal"/>
    </RelativeLayout>
</LinearLayout>